# ollama-stack

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  code-review.md  docker-compose.apple.yml  docker-compose.nvidia.yml  docker-compose.yml  install-ollama-stack.ps1  install-ollama-stack.sh  install.sh  integration_test_results.txt  ollama-stack  ollama-stack.ps1  pyproject.toml  start-stack.ps1  start-stack.sh  stop-stack.ps1  stop-stack.sh  testing_analysis_report.md
coqui-bridge/: main.py
cursor-bridge/: Dockerfile  main.py
docs/: CLI_USAGE.md  PROJECT_STRUCTURE.md  UNIFIED_CLI_SUMMARY.md  WINDOWS_SETUP.md
extensions/: manage.sh  registry.json
ollama_stack_cli/: CHANGELOG.md  CONTRIBUTING.md  config.py  context.py  display.py  docker-compose.apple.yml  docker_client.py  main.py  ollama_api_client.py  options.py  schemas.py  stack_manager.py
project-plan/: 00-overview-and-goals.md  00-project-overview.md  02-architecture-and-structure.md  03-command-specifications.md  04-core-dependencies.md  04-core-principles.md  05-development-and-testing.md  06-implementation-plan.md  07-phase-two-tests.md  PHASE_1_2_IMPLEMENTATION_REVIEW.md
public/: ascii-logo
scripts/: install.ps1  install.sh  start-stack.sh  stop-stack.ps1  stop-stack.sh
tests/: conftest.py  test_backup_command.py  test_check_command.py  test_commands.py  test_config.py  test_context.py  test_display.py  test_docker_client.py  test_install_command.py  test_integration.py  test_main.py  test_migrate_command.py  test_ollama_api_client.py  test_restart_command.py  test_schemas.py  (+6 more)
(+78 files in other folders)
